src/Dart2Parser.java
// Generated from C:/Users/majd/IdeaProjects/untitled\Dart2Parser.g4 by ANTLR 4.10.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class Dart2Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		Main=1, DataType=2, Int_type=3, String_type=4, Double_type=5, Bool_type=6, 
		Bool_value=7, MathMaticalSign=8, BooleanSign=9, EQFORNORMALMATH=10, EQFORBOOLEANMATH=11, 
		ComparisonNormalVarSign=12, ComparisonSign=13, EQ=14, A=15, AA=16, AE=17, 
		AT=18, C=19, CB=20, CBC=21, CIR=22, CIRE=23, CO=24, CP=25, D=26, DD=27, 
		DDD=28, DDDQ=29, EE=30, EG=31, GT=32, LT=33, LTE=34, LTLT=35, LTLTE=36, 
		ME=37, MINUS=38, MM=39, NE=40, NOT=41, OB=42, OBC=43, OP=44, P=45, PC=46, 
		PE=47, PL=48, PLE=49, PLPL=50, PO=51, POE=52, PP=53, QU=54, QUD=55, QUDD=56, 
		QUQU=57, QUQUEQ=58, SC=59, SE=60, SL=61, SQS=62, SQSE=63, SQUIG=64, ST=65, 
		STE=66, ABSTRACT_=67, AS_=68, ASSERT_=69, ASYNC_=70, AWAIT_=71, BREAK_=72, 
		CASE_=73, CATCH_=74, CLASS_=75, CONST_=76, CONTINUE_=77, COVARIANT_=78, 
		DEFAULT_=79, DEFERRED_=80, DO_=81, DYNAMIC_=82, ELSE_=83, ENUM_=84, EXPORT_=85, 
		EXTENDS_=86, EXTENSION_=87, EXTERNAL_=88, FACTORY_=89, FALSE_=90, FINAL_=91, 
		FINALLY_=92, FOR_=93, FUNCTION_=94, GET_=95, GTILDE_=96, HIDE_=97, IF_=98, 
		IMPLEMENTS_=99, IMPORT_=100, IN_=101, INTERFACE_=102, IS_=103, LATE_=104, 
		LET_=105, LIBRARY_=106, MIXIN_=107, NATIVE_=108, NEW_=109, NULL_=110, 
		OF_=111, ON_=112, OPERATOR_=113, PART_=114, REQUIRED_=115, RETHROW_=116, 
		RETURN_=117, SET_=118, SHOW_=119, STATIC_=120, SUPER_=121, SWITCH_=122, 
		SYNC_=123, THIS_=124, THROW_=125, TRUE_=126, TRY_=127, TYPEDEF_=128, VAR_=129, 
		VOID_=130, WHILE_=131, WITH_=132, YIELD_=133, NUMBER=134, DOUBLE=135, 
		HEX_NUMBER=136, SingleLineString=137, MultiLineString=138, IDENTIFIER=139, 
		WHITESPACE=140, SINGLE_LINE_COMMENT=141, MULTI_LINE_COMMENT=142;
	public static final int
		RULE_program = 0, RULE_content = 1, RULE_varDefinition = 2, RULE_intIncrease = 3, 
		RULE_boolVarDefnition = 4, RULE_varEQ = 5, RULE_boolVarEq = 6, RULE_exp = 7, 
		RULE_boolExp = 8, RULE_def_class = 9, RULE_class_body = 10, RULE_def_function_void = 11, 
		RULE_def_function_datatype = 12, RULE_function_body = 13, RULE_def_if = 14, 
		RULE_ifContent = 15, RULE_elseIfContent = 16, RULE_elseContent = 17, RULE_condition = 18;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "content", "varDefinition", "intIncrease", "boolVarDefnition", 
			"varEQ", "boolVarEq", "exp", "boolExp", "def_class", "class_body", "def_function_void", 
			"def_function_datatype", "function_body", "def_if", "ifContent", "elseIfContent", 
			"elseContent", "condition"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'main()'", null, "'int'", "'String'", "'double'", "'bool'", null, 
			null, null, null, null, null, null, "'='", "'&'", "'&&'", "'&='", "'@'", 
			"','", "']'", "'}'", "'^'", "'^='", "':'", "')'", "'.'", "'..'", "'...'", 
			"'...?'", "'=='", "'=>'", "'>'", "'<'", "'<='", "'<<'", "'<<='", "'-='", 
			"'-'", "'--'", "'!='", "'!'", "'['", "'{'", "'('", "'|'", "'%'", "'%='", 
			"'+'", "'+='", "'++'", "'#'", "'|='", "'||'", "'?'", "'?.'", "'?..'", 
			"'??'", "'??='", "';'", "'/='", "'/'", "'~/'", "'~/='", "'~'", "'*'", 
			"'*='", "'abstract'", "'as'", "'assert'", "'async'", "'await'", "'break'", 
			"'case'", "'catch'", "'class'", "'const'", "'continue'", "'covariant'", 
			"'default'", "'deferred'", "'do'", "'dynamic'", "'else'", "'enum'", "'export'", 
			"'extends'", "'extension'", "'external'", "'factory'", "'false'", "'final'", 
			"'finally'", "'for'", "'Function'", "'get'", "'gtilde'", "'hide'", "'if'", 
			"'implements'", "'import'", "'in'", "'interface'", "'is'", "'late'", 
			"'let'", "'library'", "'mixin'", "'native'", "'new'", "'null'", "'of'", 
			"'on'", "'operator'", "'part'", "'required'", "'rethrow'", "'return'", 
			"'set'", "'show'", "'static'", "'super'", "'switch'", "'sync'", "'this'", 
			"'throw'", "'true'", "'try'", "'typedef'", "'var'", "'void'", "'while'", 
			"'with'", "'yield'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "Main", "DataType", "Int_type", "String_type", "Double_type", "Bool_type", 
			"Bool_value", "MathMaticalSign", "BooleanSign", "EQFORNORMALMATH", "EQFORBOOLEANMATH", 
			"ComparisonNormalVarSign", "ComparisonSign", "EQ", "A", "AA", "AE", "AT", 
			"C", "CB", "CBC", "CIR", "CIRE", "CO", "CP", "D", "DD", "DDD", "DDDQ", 
			"EE", "EG", "GT", "LT", "LTE", "LTLT", "LTLTE", "ME", "MINUS", "MM", 
			"NE", "NOT", "OB", "OBC", "OP", "P", "PC", "PE", "PL", "PLE", "PLPL", 
			"PO", "POE", "PP", "QU", "QUD", "QUDD", "QUQU", "QUQUEQ", "SC", "SE", 
			"SL", "SQS", "SQSE", "SQUIG", "ST", "STE", "ABSTRACT_", "AS_", "ASSERT_", 
			"ASYNC_", "AWAIT_", "BREAK_", "CASE_", "CATCH_", "CLASS_", "CONST_", 
			"CONTINUE_", "COVARIANT_", "DEFAULT_", "DEFERRED_", "DO_", "DYNAMIC_", 
			"ELSE_", "ENUM_", "EXPORT_", "EXTENDS_", "EXTENSION_", "EXTERNAL_", "FACTORY_", 
			"FALSE_", "FINAL_", "FINALLY_", "FOR_", "FUNCTION_", "GET_", "GTILDE_", 
			"HIDE_", "IF_", "IMPLEMENTS_", "IMPORT_", "IN_", "INTERFACE_", "IS_", 
			"LATE_", "LET_", "LIBRARY_", "MIXIN_", "NATIVE_", "NEW_", "NULL_", "OF_", 
			"ON_", "OPERATOR_", "PART_", "REQUIRED_", "RETHROW_", "RETURN_", "SET_", 
			"SHOW_", "STATIC_", "SUPER_", "SWITCH_", "SYNC_", "THIS_", "THROW_", 
			"TRUE_", "TRY_", "TYPEDEF_", "VAR_", "VOID_", "WHILE_", "WITH_", "YIELD_", 
			"NUMBER", "DOUBLE", "HEX_NUMBER", "SingleLineString", "MultiLineString", 
			"IDENTIFIER", "WHITESPACE", "SINGLE_LINE_COMMENT", "MULTI_LINE_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Dart2Parser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public Dart2Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public List<ContentContext> content() {
			return getRuleContexts(ContentContext.class);
		}
		public ContentContext content(int i) {
			return getRuleContext(ContentContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Dart2ParserListener ) ((Dart2ParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Dart2ParserListener ) ((Dart2ParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Dart2ParserVisitor ) return ((Dart2ParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(41);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DataType || _la==Bool_type || _la==IF_ || _la==IDENTIFIER) {
				{
				{
				setState(38);
				content();
				}
				}
				setState(43);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ContentContext extends ParserRuleContext {
		public VarDefinitionContext varDefinition() {
			return getRuleContext(VarDefinitionContext.class,0);
		}
		public VarEQContext varEQ() {
			return getRuleContext(VarEQContext.class,0);
		}
		public IntIncreaseContext intIncrease() {
			return getRuleContext(IntIncreaseContext.class,0);
		}
		public BoolVarDefnitionContext boolVarDefnition() {
			return getRuleContext(BoolVarDefnitionContext.class,0);
		}
		public BoolVarEqContext boolVarEq() {
			return getRuleContext(BoolVarEqContext.class,0);
		}
		public Def_ifContext def_if() {
			return getRuleContext(Def_ifContext.class,0);
		}
		public ContentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_content; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Dart2ParserListener ) ((Dart2ParserListener)listener).enterContent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Dart2ParserListener ) ((Dart2ParserListener)listener).exitContent(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Dart2ParserVisitor ) return ((Dart2ParserVisitor<? extends T>)visitor).visitContent(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ContentContext content() throws RecognitionException {
		ContentContext _localctx = new ContentContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_content);
		try {
			setState(50);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(44);
				varDefinition();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(45);
				varEQ();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(46);
				intIncrease();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(47);
				boolVarDefnition();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(48);
				boolVarEq();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(49);
				def_if();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDefinitionContext extends ParserRuleContext {
		public TerminalNode DataType() { return getToken(Dart2Parser.DataType, 0); }
		public TerminalNode IDENTIFIER() { return getToken(Dart2Parser.IDENTIFIER, 0); }
		public TerminalNode SC() { return getToken(Dart2Parser.SC, 0); }
		public TerminalNode EQ() { return getToken(Dart2Parser.EQ, 0); }
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public VarDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDefinition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Dart2ParserListener ) ((Dart2ParserListener)listener).enterVarDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Dart2ParserListener ) ((Dart2ParserListener)listener).exitVarDefinition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Dart2ParserVisitor ) return ((Dart2ParserVisitor<? extends T>)visitor).visitVarDefinition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarDefinitionContext varDefinition() throws RecognitionException {
		VarDefinitionContext _localctx = new VarDefinitionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_varDefinition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			match(DataType);
			setState(53);
			match(IDENTIFIER);
			setState(57);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case EQ:
				{
				setState(54);
				match(EQ);
				setState(55);
				exp(0);
				}
				break;
			case SC:
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(59);
			match(SC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IntIncreaseContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(Dart2Parser.IDENTIFIER, 0); }
		public TerminalNode SC() { return getToken(Dart2Parser.SC, 0); }
		public TerminalNode PLPL() { return getToken(Dart2Parser.PLPL, 0); }
		public TerminalNode MM() { return getToken(Dart2Parser.MM, 0); }
		public IntIncreaseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_intIncrease; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Dart2ParserListener ) ((Dart2ParserListener)listener).enterIntIncrease(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Dart2ParserListener ) ((Dart2ParserListener)listener).exitIntIncrease(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Dart2ParserVisitor ) return ((Dart2ParserVisitor<? extends T>)visitor).visitIntIncrease(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IntIncreaseContext intIncrease() throws RecognitionException {
		IntIncreaseContext _localctx = new IntIncreaseContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_intIncrease);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			match(IDENTIFIER);
			setState(62);
			_la = _input.LA(1);
			if ( !(_la==MM || _la==PLPL) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(63);
			match(SC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BoolVarDefnitionContext extends ParserRuleContext {
		public TerminalNode Bool_type() { return getToken(Dart2Parser.Bool_type, 0); }
		public TerminalNode IDENTIFIER() { return getToken(Dart2Parser.IDENTIFIER, 0); }
		public TerminalNode SC() { return getToken(Dart2Parser.SC, 0); }
		public TerminalNode EQ() { return getToken(Dart2Parser.EQ, 0); }
		public BoolExpContext boolExp() {
			return getRuleContext(BoolExpContext.class,0);
		}
		public BoolVarDefnitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_boolVarDefnition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Dart2ParserListener ) ((Dart2ParserListener)listener).enterBoolVarDefnition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Dart2ParserListener ) ((Dart2ParserListener)listener).exitBoolVarDefnition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Dart2ParserVisitor ) return ((Dart2ParserVisitor<? extends T>)visitor).visitBoolVarDefnition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BoolVarDefnitionContext boolVarDefnition() throws RecognitionException {
		BoolVarDefnitionContext _localctx = new BoolVarDefnitionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_boolVarDefnition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(65);
			match(Bool_type);
			setState(66);
			match(IDENTIFIER);
			setState(70);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case EQ:
				{
				setState(67);
				match(EQ);
				setState(68);
				boolExp(0);
				}
				break;
			case SC:
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(72);
			match(SC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarEQContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(Dart2Parser.IDENTIFIER, 0); }
		public TerminalNode SC() { return getToken(Dart2Parser.SC, 0); }
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public TerminalNode EQFORNORMALMATH() { return getToken(Dart2Parser.EQFORNORMALMATH, 0); }
		public TerminalNode EQ() { return getToken(Dart2Parser.EQ, 0); }
		public VarEQContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varEQ; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Dart2ParserListener ) ((Dart2ParserListener)listener).enterVarEQ(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Dart2ParserListener ) ((Dart2ParserListener)listener).exitVarEQ(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Dart2ParserVisitor ) return ((Dart2ParserVisitor<? extends T>)visitor).visitVarEQ(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarEQContext varEQ() throws RecognitionException {
		VarEQContext _localctx = new VarEQContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_varEQ);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			match(IDENTIFIER);
			setState(78);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case EQFORNORMALMATH:
			case EQ:
				{
				setState(75);
				_la = _input.LA(1);
				if ( !(_la==EQFORNORMALMATH || _la==EQ) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(76);
				exp(0);
				}
				break;
			case SC:
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(80);
			match(SC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BoolVarEqContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(Dart2Parser.IDENTIFIER, 0); }
		public TerminalNode SC() { return getToken(Dart2Parser.SC, 0); }
		public BoolExpContext boolExp() {
			return getRuleContext(BoolExpContext.class,0);
		}
		public TerminalNode EQFORBOOLEANMATH() { return getToken(Dart2Parser.EQFORBOOLEANMATH, 0); }
		public TerminalNode EQ() { return getToken(Dart2Parser.EQ, 0); }
		public BoolVarEqContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_boolVarEq; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Dart2ParserListener ) ((Dart2ParserListener)listener).enterBoolVarEq(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Dart2ParserListener ) ((Dart2ParserListener)listener).exitBoolVarEq(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Dart2ParserVisitor ) return ((Dart2ParserVisitor<? extends T>)visitor).visitBoolVarEq(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BoolVarEqContext boolVarEq() throws RecognitionException {
		BoolVarEqContext _localctx = new BoolVarEqContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_boolVarEq);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			match(IDENTIFIER);
			setState(86);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case EQFORBOOLEANMATH:
			case EQ:
				{
				setState(83);
				_la = _input.LA(1);
				if ( !(_la==EQFORBOOLEANMATH || _la==EQ) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(84);
				boolExp(0);
				}
				break;
			case SC:
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(88);
			match(SC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpContext extends ParserRuleContext {
		public ExpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exp; }
	 
		public ExpContext() { }
		public void copyFrom(ExpContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class BetweenBracketContext extends ExpContext {
		public TerminalNode OP() { return getToken(Dart2Parser.OP, 0); }
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public TerminalNode CP() { return getToken(Dart2Parser.CP, 0); }
		public BetweenBracketContext(ExpContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Dart2ParserListener ) ((Dart2ParserListener)listener).enterBetweenBracket(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Dart2ParserListener ) ((Dart2ParserListener)listener).exitBetweenBracket(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Dart2ParserVisitor ) return ((Dart2ParserVisitor<? extends T>)visitor).visitBetweenBracket(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class VariableContext extends ExpContext {
		public TerminalNode IDENTIFIER() { return getToken(Dart2Parser.IDENTIFIER, 0); }
		public VariableContext(ExpContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Dart2ParserListener ) ((Dart2ParserListener)listener).enterVariable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Dart2ParserListener ) ((Dart2ParserListener)listener).exitVariable(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Dart2ParserVisitor ) return ((Dart2ParserVisitor<? extends T>)visitor).visitVariable(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NumberContext extends ExpContext {
		public TerminalNode NUMBER() { return getToken(Dart2Parser.NUMBER, 0); }
		public NumberContext(ExpContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Dart2ParserListener ) ((Dart2ParserListener)listener).enterNumber(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Dart2ParserListener ) ((Dart2ParserListener)listener).exitNumber(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Dart2ParserVisitor ) return ((Dart2ParserVisitor<? extends T>)visitor).visitNumber(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class MathematicsLogicContext extends ExpContext {
		public List<ExpContext> exp() {
			return getRuleContexts(ExpContext.class);
		}
		public ExpContext exp(int i) {
			return getRuleContext(ExpContext.class,i);
		}
		public TerminalNode MathMaticalSign() { return getToken(Dart2Parser.MathMaticalSign, 0); }
		public MathematicsLogicContext(ExpContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Dart2ParserListener ) ((Dart2ParserListener)listener).enterMathematicsLogic(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Dart2ParserListener ) ((Dart2ParserListener)listener).exitMathematicsLogic(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Dart2ParserVisitor ) return ((Dart2ParserVisitor<? extends T>)visitor).visitMathematicsLogic(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StringContext extends ExpContext {
		public TerminalNode SingleLineString() { return getToken(Dart2Parser.SingleLineString, 0); }
		public StringContext(ExpContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Dart2ParserListener ) ((Dart2ParserListener)listener).enterString(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Dart2ParserListener ) ((Dart2ParserListener)listener).exitString(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Dart2ParserVisitor ) return ((Dart2ParserVisitor<? extends T>)visitor).visitString(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DoubleContext extends ExpContext {
		public TerminalNode DOUBLE() { return getToken(Dart2Parser.DOUBLE, 0); }
		public DoubleContext(ExpContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Dart2ParserListener ) ((Dart2ParserListener)listener).enterDouble(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Dart2ParserListener ) ((Dart2ParserListener)listener).exitDouble(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Dart2ParserVisitor ) return ((Dart2ParserVisitor<? extends T>)visitor).visitDouble(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpContext exp() throws RecognitionException {
		return exp(0);
	}

	private ExpContext exp(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExpContext _localctx = new ExpContext(_ctx, _parentState);
		ExpContext _prevctx = _localctx;
		int _startState = 14;
		enterRecursionRule(_localctx, 14, RULE_exp, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case OP:
				{
				_localctx = new BetweenBracketContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
